2004-09-13  Rodney Dawes  <dobey@novell.com>
	
	* NEWS:
	* configure.in: Bump version to 2.8.0

2004-09-01  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/navigation/stock_new-tab.png
	* 24x24/stock/navigation/stock_new-tab.png: make the stroke more Gnomeish

	* 48x48/mimetypes/gnome-mime-application-wordperfect.png
	* 48x48/mimetypes/Makefile.am: WP documents

2004-08-29  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Bump version to 2.7.90 for release and to sync with
	the GNOME Desktop version

2004-08-27  Akagic Amila  <bono@linux.org.ba>

	* configure.in: Added 'bs' to ALL_LINGUAS.

2004-08-16  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add nb to ALL_LINGUAS.

2004-08-16  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Bump version to 1.3.7 for release

2004-08-03  Jakub Steiner <jimmac@ximian.com>

	* 16x16/devices/Makefile.am
	* 16x16/devices/gnome-dev-ethernet.png
	* 16x16/devices/gnome-dev-pci.png
	* 16x16/devices/gnome-dev-wavelan-encrypted.png
	* 16x16/devices/gnome-dev-wavelan.png
	* 24x24/devices/Makefile.am
	* 24x24/devices/gnome-dev-ethernet.png
	* 24x24/devices/gnome-dev-harddisk-1394.png
	* 24x24/devices/gnome-dev-harddisk-usb.png
	* 24x24/devices/gnome-dev-media-cf.png
	* 24x24/devices/gnome-dev-media-ms.png
	* 24x24/devices/gnome-dev-media-sdmmc.png
	* 24x24/devices/gnome-dev-media-sm.png
	* 24x24/devices/gnome-dev-pci.png
	* 24x24/devices/gnome-dev-removable-1394.png
	* 24x24/devices/gnome-dev-removable-usb.png
	* 24x24/devices/gnome-dev-wavelan-encrypted.png
	* 24x24/devices/gnome-dev-wavelan.png
	* 48x48/devices/Makefile.am
	* 48x48/devices/gnome-dev-cdrom-audio.png
	* 48x48/devices/gnome-dev-cdrom.png
	* 48x48/devices/gnome-dev-dvd.png
	* 48x48/devices/gnome-dev-harddisk-1394.png
	* 48x48/devices/gnome-dev-harddisk-usb.png
	* 48x48/devices/gnome-dev-media-cf.png
	* 48x48/devices/gnome-dev-media-ms.png
	* 48x48/devices/gnome-dev-media-sdmmc.png
	* 48x48/devices/gnome-dev-media-sm.png