@@ -1,3 +1,15 @@
+2004-09-24  Jakub Steiner <jimmac@ximian.com>
+
+	* 48x48/apps:
+	  - character-picker.png
+		- clock.png
+		- drawer.png
+		- eyes.png
+		- modem.png
+		- stock-ticker.png
+		- volume-knob.png: new look for the applets. Can someone please take a
+		look at making the applets use these?
+
 2004-09-13  Rodney Dawes  <dobey@novell.com>
 	
 	* NEWS:
